objects/Case_AssetRecordType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Associazione tra Case.RecordType.DeveloperName e Asset.RecordType.DeveloperName</description>
    <fields>
        <fullName>assetDevName__c</fullName>
        <label>assetDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>beAttivazioneList__c</fullName>
        <label>beAttivazioneList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>beCessazioneList__c</fullName>
        <label>beCessazioneList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseDevName__c</fullName>
        <label>caseDevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceName__c</fullName>
        <label>serviceName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case_AssetRecordType</label>
</CustomObject>